# PhotoShare

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 17a310771745_hotfix.py  b572a894bd75_init.py  bea8dd8761c6_.py  f1ac94f3ee8b_insert_roles.py
backend/: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 670f2d762935_add_banned_column_to_users.py  adffc978038d_add_roles.py  b1e84d34320e_tags_id_autoincrement.py
backend/src/conf/: config.py
backend/src/database/: db.py
backend/src/entity/: models.py
backend/src/repository/: auth.py  comments.py  posts.py
backend/src/routes/: auth.py  cloudinary_routes.py  comments.py  posts.py  tags.py
backend/src/schemas/: auth.py  cloudinary_qr.py  comments.py  posts.py  tags.py
backend/src/services/: cloudinary.py  pass_utils.py  posts.py  qr_code.py  utils.py
docs/source/: conf.py  modules.rst  repository.rst  routes.rst  schemas.rst  services.rst
frontend/photoshare-app/: next.config.ts  package.json  pnpm-lock.yaml
frontend/photoshare-app/src/app/: constants.tsx  layout.tsx  page.tsx
frontend/photoshare-app/src/app/explore/: page.tsx
frontend/photoshare-app/src/app/gallery/: page.tsx
frontend/photoshare-app/src/app/login/: page.tsx
frontend/photoshare-app/src/app/post-edit-delete/: page.tsx
frontend/photoshare-app/src/app/postcard/: page.tsx
frontend/photoshare-app/src/app/profile/: page.tsx
frontend/photoshare-app/src/app/register/: page.tsx
frontend/photoshare-app/src/app/transformation/: page.tsx
frontend/photoshare-app/src/components/: add-tag-dialog.tsx  create-post-button.tsx  delete-post-dialog.tsx  edit-post-dialog.tsx  header.tsx  mode-toggle.tsx  post-actions-menu.tsx  post-carousel.tsx  post-grid.tsx  post-list.tsx  post-modal.tsx  posts-carousel.tsx  profile-post-grid.tsx  share-button.tsx  user-nav.tsx  vertical-post-grid.tsx
frontend/photoshare-app/src/hooks/: use-auth.tsx
src/: schemas.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repo/: auth.py  photos.py
src/repository/: auth.py  base.py  comments.py  photos.py  posts.py
src/routes/: auth.py  cloudinary_routes.py  comments.py  image_routes.py  photos.py  posts.py  tags.py
src/schemas/: auth.py  cloudinary_qr.py  comments.py  image_schemas.py  photos.py  posts.py  tags.py
src/services/: cloudinary.py  posts.py  qr_code.py  utils.py
(+2 files in other folders)
