[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = ""
authors = ["N0yhz <vutunhzyonh@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pycryptodome = "3.19.1"
pydantic = {extras = ["email"], version = "^2.10.4"}
slowapi = "^0.1.9"
fastapi-mail = "^1.4.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
requests = "^2.32.3"
qrcode = "^8.0"
python-multipart = "^0.0.20"
redis = "^5.2.1"
fastapi-limiter = "^0.1.6"
aiofiles = "^24.1.0"
greenlet = "^3.1.1"
cloudinary = "^1.42.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
pillow = "^11.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
